[project]
name = "deepqbert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ale-py>=0.10.1",
    "gymnasium[other]>=1.0.0",
    "pyqt6>=6.8.0",
    "ruff>=0.8.6",
    "seaborn>=0.13.2",
    "stable-baselines3[extra]>=2.5.0",
    "torch>=2.5.1",
]
